--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
 
     <div class="outcontainer fade-in-text fadeIn" id="hero-bg">
-        <div class="container">
-            <div class="row">
-                <div class="col">
+        <div class="container-md">
+            <div class="row justify-content-start">
+                <div class="col-md-6">
                     <img src="assets/logo-white.svg" class="logo" alt="logo">
                 </div>
             </div>
@@ -24,8 +24,11 @@
             <div class="row">
                 <div class="col">
                     <div class="hero">
-                        <h1><span class="welcome">Welcome to</span> Rooster Grin</h1>
-                        <button type="button" class="btn btn-primary">Button</button>
+                        <h1 class="rooster-hero" style= "text-transform: uppercase; text-align: center; font-size: 100px;">
+                            <span class="welcome" style="text-transform: uppercase; text-align: center; font-size: 50px;">Welcome to</span>
+                            <br> Rooster Grin
+                        </h1>
+                        <button type="button" class="btn btn-outline-light">Rooster btn</button>
                     </div>
                 </div>
             </div>
@@ -33,16 +36,17 @@
         </div>
     </div>
 
-    <div class="outcontainer">
+    <div class="outcontainer" id="about-container">
         <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h1>WHO WE ARE</h1>
-                    <br></br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel fuga velit dolore,
+            <div class="row ">
+                <div class="col-md-6 about-description"> 
+                    <h1 class="section-title"> WHO WE ARE</h1>
+                    <br> <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel fuga velit dolore,
                     aspernatur aperiam eius perspiciatis porro sunt tempore facere quas, dignissimos vero natus
                     suscipit! Quaerat architecto at amet voluptatum.
+                    </p>
                 </div>
-                <div class="col-md-6" id="about-bg">
+                <div class="col-md-6 justify-content-end " id="about-bg" >
 
                 </div>
             </div>
