--- a/index.html
+++ b/index.html
@@ -40,10 +40,8 @@
         <div class="container">
             <div class="row ">
                 <div class="col-md-6 about-description"> 
-                    <h1 class="section-title"> WHO WE ARE</h1>
-                    <br> <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel fuga velit dolore,
-                    aspernatur aperiam eius perspiciatis porro sunt tempore facere quas, dignissimos vero natus
-                    suscipit! Quaerat architecto at amet voluptatum.
+                    <h1 class="section-title" style="text-transform: uppercase;">Who We Are</h1>
+                    <br> <p>Founded in 2012, Rooster Grin is comprised of a dynamic group of individuals who share a common passion for customer service. We pride our ourselves in quick response times and high-quality products. With hundreds of satisfied clients, we have consistently proven our ability to exceed client’s expectations. Over the years we have grown from a single person to a team of more than ten. Contact us and be amazed at our customer service.
                     </p>
                 </div>
                 <div class="col-md-6 justify-content-end " id="about-bg" >
@@ -71,16 +69,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h1>Principles</h1>
-                    <br></br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel fuga velit dolore, aspernatur
-                    aperiam eius perspiciatis porro sunt tempore facere quas, dignissimos vero natus suscipit! Quaerat
-                    architecto at amet voluptatum.
+                    <h1 class="section-title">Rooster Grin Service Principles</h1>
+                    <p>We believe that to deliver methodical and consistent work, we must be able to discover a deeper understanding of the audience and objectives to be able design a purposeful project. The take off phase is when we  implement an interactive and functional prototype. Reviewed, Refined, and Optimized. Marrying that with a highly functional system.. ready for review. After it's been reviewed, polished, and tested - Voilà, it's ready for delivery! </p> 
                 </div>
 
 
                 <div class="col-md-6" id="principles-icons-bg">
                     <div class="row">
-                        <div class="col">
+                        <div class="col justify-content-end">
+                            
                             <img src="assets/home-expertise.svg" class="icon" alt="home-expertise">
                         </div>
                         <div class="col">
