--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="outcontainer fade-in-text fadeIn " id="hero-bg" style="border: 5px red solid;">
 
 
-        <div class="container-fluid">
+        <div class="container">
             <div class="row ">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-4 my-2 ">
                     <img src="assets/logo-white.svg" class="logo" alt="logo">
@@ -28,7 +28,7 @@
                     <div class="hero">
                         <h1 class="rooster-hero my-3">
                             <span class="welcome"
-                                style="text-transform: uppercase; text-align: center; font-size: 50px;">Welcome
+                                style="text-transform: uppercase; text-align: center;">Welcome
                                 to</span>
                             <br> Rooster Grin
                         </h1>
@@ -60,20 +60,20 @@
         </div>
     </div>
 
-    <div class="outcontainer details-bg">
-
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div class="details">
-                        <h1><span class="details-page">Check out our story</h1>
-                        <button type="button" class="btn btn-primary">Button</button>
-                    </div>
-                </div>
+    <div class="outcontainer fade-in-text fadeIn details-info"  >
+    <div class="row">
+        <div class="col ">
+            <div class="hero">
+                <h1 class="rooster-hero my-3">
+                    <span class="welcome"
+                        style="text-transform: uppercase; text-align: center;">Checkout our  main page
+                        </span>
+                </h1>
+                <button type="button" class="btn btn-outline-light">Rooster btn</button>
             </div>
         </div>
     </div>
-
+    </div>
 
     <div class="outcontainer" id="principles-bg">
         <div class="container">
@@ -112,19 +112,20 @@
     </div>
 
 
-    <div class="outcontainer" id="team-bg">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    pic
-                </div>
-                <div class="col-md-6">
-                    <h1 class="section-title">Join the team</h1>
-                    <button type="button" class="btn btn-primary">Button</button>
+    <div class="outcontainer fade-in-text fadeIn" id="team-bg"  >
+        <div class="row">
+            <div class="col ">
+                <div class="hero">
+                    <h1 class="rooster-hero my-3">
+                        <span class="welcome"
+                            style="text-transform: uppercase; text-align: center;">Join the team
+                            </span>
+                    </h1>
+                    <button type="button" class="btn btn-outline-light">Rooster btn</button>
                 </div>
             </div>
         </div>
-    </div>
+        </div>
 
 
     <div id="myCarousel" class="carousel slide " data-ride="carousel" >
