--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <div class="outcontainer fade-in-text fadeIn " id="hero-bg" style="border: 5px red solid;">
+    <div class="outcontainer fade-in-text fadeIn " id="hero-bg">
 
 
         <div class="container">
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="col ">
                     <div class="hero">
-                        <h1 class="rooster-hero my-3">
+                        <h1 class="rooster-hero my-5">
                             <span class="welcome"
                                 style="text-transform: uppercase; text-align: center;">Welcome
                                 to</span>
@@ -40,11 +40,12 @@
         </div>
     </div>
 
+
     <div class="outcontainer" id="about-container">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 about-description">
-                    <h1 class="section-title" style="text-transform: uppercase;">Who We Are</h1>
+                <div class="col-md-6">
+                    <h1 class="section-title mx-5 my-2" style="text-transform: uppercase;">Who We Are</h1>
                     <br>
                     <p class="my-5">Founded in 2012, Rooster Grin is comprised of a dynamic group of individuals who
                         share a common passion for customer service. We pride our ourselves in quick response times and
@@ -53,14 +54,14 @@
                         team of more than ten. Contact us and be amazed at our customer service.
                     </p>
                 </div>
-                <div class="col about-bg">
+                <div class="col-md-6 about-bg">
 
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="outcontainer fade-in-text fadeIn details-info"  >
+    <div class="outcontainer details-info hero"  >
     <div class="row">
         <div class="col ">
             <div class="hero">
@@ -112,7 +113,7 @@
     </div>
 
 
-    <div class="outcontainer fade-in-text fadeIn" id="team-bg"  >
+    <div class="outcontainer hero" id="team-bg"  >
         <div class="row">
             <div class="col ">
                 <div class="hero">
@@ -158,44 +159,6 @@
 
 
 
-
-<!-- <div id="myCarousel" class="carousel slide" data-ride="carousel" >
-    <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <div class="container carousel-content">
-                <h1 class="section-title">EXAMPLE HEADLINES</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, necessitatibus quisquam.
-                    Repellendus
-                    aliquid quia nemo ipsam praesentium at reiciendis nisi ea, molestias, doloremque eligendi impedit
-                    iusto
-                    deserunt, nulla repellat totam.</p>
-                <button type="button" class="btn btn-primary">Button</button>
-
-            </div>
-        </div>
-
-        <div class="carousel-item">
-            <div class="container carousel-content">
-                <h1 class="section-title">EXAMPLE HEADLINES 2</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, necessitatibus quisquam.
-                    Repellendus
-                    aliquid quia nemo ipsam praesentium at reiciendis nisi ea, molestias, doloremque eligendi impedit
-                    iusto
-                    deserunt, nulla repellat totam.</p>
-                <button type="button" class="btn btn-primary">Button</button>
-
-            </div>
-        </div>
-
-    </div>
-</div> -->
-    
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
