--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
         <div class="container d-flex justify-content-center align-items-center">
             <div class="row">
                 <div class="col-md-6">
-                    <h1 class="section-title mx-5 my-2" style="text-transform: uppercase;">Who We Are</h1>
-                    <br>
-                    <p class="my-5">Founded in 2012, Rooster Grin is comprised of a dynamic group of individuals who
+                    <h1 class="section-title">Who We Are</h1>
+                    <p>Founded in 2012, Rooster Grin is comprised of a dynamic group of individuals who
                         share a common passion for customer service. We pride our ourselves in quick response times and
                         high-quality products. With hundreds of satisfied clients, we have consistently proven our
                         ability to exceed clients expectations. Over the years we have grown from a single person to a
@@ -157,10 +156,10 @@
 
 
         
-            <div class="card">
-                <div class="card-header"> Our Customers
+            <div class="card ">
+                <div class="card-header justify-content-center align-items-center"> Our Customers
                     <div id="myCarousel" class="carousel slide " data-bs-ride="carousel">
-                        <div class="carousel-inner  ">
+                        <div class="carousel-inner">
                             <div class="carousel-item active">
 
                                 <img src="assets/rooster-work-1.png" class="d-block w-100 rooster-work-1"
