--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="col ">
                     <div class="hero">
                         <h1 class="rooster-hero my-5">
-                            <span class="welcome" style="text-transform: uppercase; text-align: center;">Welcome
+                            <span class="section-title" style="text-transform: uppercase; text-align: center;">Welcome
                                 to</span>
                             <br> Rooster Grin
                         </h1>
@@ -76,7 +76,7 @@
             <div class="col ">
                 <div class="hero">
                     <h1 class="rooster-hero my-3">
-                        <span class="welcome" style="text-transform: uppercase; text-align: center;">Main Services
+                        <span class="sign-text" style="text-transform: uppercase; text-align: center;">Main Services
                         </span>
                     </h1>
                     <button id="details-btn" type="button" class="btn btn-outline-light submit-button">Explore</button>
