--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="col ">
                 <div class="hero">
                     <h1 class="rooster-hero my-3">
-                        <span class="sign-text" style="text-transform: uppercase; text-align: center;">Main Services
+                        <span class="sign-text" style="text-transform: uppercase; ">Main Services
                         </span>
                     </h1>
                     <button id="details-btn" type="button" class="btn btn-outline-light submit-button">Explore</button>
@@ -151,6 +151,7 @@
                     </div>
                 </div>
             </div>
+            
         </div>
 
 
